2004-02-26    <jkohen@coresecurity.com>

	* impacket/ImpactPacket.py (ARP.as_pro): Fixed as_{hrd,pro} methods to not invoke the tolist method, because they were being called with array objects as input, and anyway it wasn't necessary to call that method for what they did.

2003-12-16    <jkohen@coresecurity.com>

	* setup.py: Bumped version number to 0.9.5.1.

	* impacket/dcerpc/dcerpc_v4.py (DCERPC_v4.send): fixed a problem in the fragmentation code caused by a misindented line that was introduced in the last release.

2003-12-10  Javier Kohen  <jkohen@coresecurity.com>

	* impacket/dcerpc/dcerpc_v4.py (DCERPC_v4.bind): support idempotent flag.
	(DCERPC_v4.send): reduced fragment size to avoid IP fragmentation on links with MTU = 1500. Added a method that allows the caller to configure this size.

2003-12-02    <jkohen@coresecurity.com>

	* impacket/dcerpc/dcerpc_v4.py (DCERPC_v4.bind): made self.__bind protected
	(DCERPC_v4.send): fragment outgoing packets.

2003-12-01    <jkohen@coresecurity.com>

	* setup.py: Force linking with G++ if GCC was found, to avoid a missing symbol on some configurations.

2003-11-28    <jkohen@coresecurity.com>

	* impacket/dcerpc/dcerpc_v4.py: Fixed self.bind variable having the same name than a method.